--- a/index-1.html
+++ b/index-1.html
@@ -100,9 +100,13 @@
       <nav
         class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0"
       >
-        <a href class="navbar-brand p-0">
-          <h1 class="m-0"><i class="fa fa-user-tie me-2"></i>Startup</h1>
-        </a>
+        <a href="index.html" class="navbar-brand p-0">
+          <img
+            src="img/A3_images/Logo_transparent.png"
+            alt=""
+            width="130"
+            height="50"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -135,6 +139,18 @@
               <div class="dropdown-menu m-0">
                 <a href="about-1.html" class="dropdown-item">About 1</a>
                 <a href="about-2.html" class="dropdown-item">About 2</a>
+              </div>
+            </div>
+            <div class="nav-item dropdown">
+              <a
+                href="#"
+                class="nav-link dropdown-toggle"
+                data-bs-toggle="dropdown"
+                >cources</a
+              >
+              <div class="dropdown-menu m-0">
+                <a href="cma-usa.html" class="dropdown-item">CMA USA</a>
+                <a href="about-2.html" class="dropdown-item">CMA INDIAN</a>
               </div>
             </div>
             <div class="nav-item dropdown">
