--- a/index-1.html
+++ b/index-1.html
@@ -149,26 +149,43 @@
                 >cources</a
               >
               <div class="dropdown-menu m-0">
-                <a href="cma-usa.html" class="dropdown-item">CMA USA</a>
+                <!-- <div class="dropdown-submenu m-0">
+                    <a href="" class="dropdown-toggle m-0" data-bs-toggle="dropdown">CMA USA</a>
+                    <div class="dropdown-menu m-0">
+                      <a href="about-2.html" class="dropdown-item">CMA INDIAN1</a>
+                      <a href="about-2.html" class="dropdown-item">CMA INDIAN1</a>
+                    </div>
+
+                </div> -->
+
+                <a href="about-2.html" class="dropdown-item" data-bs-toggle="dropdown">CMA INDIAN</a>
                 <a href="about-2.html" class="dropdown-item">CMA INDIAN</a>
               </div>
             </div>
+
+
+
             <div class="nav-item dropdown">
-              <a
-                href="#"
-                class="nav-link dropdown-toggle"
-                data-bs-toggle="dropdown"
-                >Service</a
-              >
-              <div class="dropdown-menu m-0">
-                <a href="service-1.html" class="dropdown-item">Service 1</a>
-                <a href="service-2.html" class="dropdown-item">Service 2</a>
-                <a href="service-3.html" class="dropdown-item">Service 3</a>
-                <a href="service-detail.html" class="dropdown-item"
-                  >Service Detail</a
-                >
-              </div>
+              <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Service</a>
+              <ul class="dropdown-menu m-0">
+                <li><a href="service-1.html" class="dropdown-item">Service 1</a></li>
+                <li><a href="service-2.html" class="dropdown-item">Service 2</a></li>
+                <li><a href="service-3.html" class="dropdown-item">Service 3</a></li>
+                <li><a href="service-detail.html" class="dropdown-item">Service Detail</a></li>
+                <!-- Add the submenu for Service 1 here -->
+                <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle">Submenu item 3 </a>
+                  <ul class="submenu dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Multi level 1</a></li>
+                    <li><a class="dropdown-item" href="#">Multi level 2</a></li>
+                  </ul>
+                </li>
+              </ul>
             </div>
+
+
+
+
+
             <div class="nav-item dropdown">
               <a
                 href="#"
