cource,index page compleated.

--- a/Course.html
+++ b/Course.html
@@ -112,75 +112,23 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <div class="navbar-nav ms-auto py-0">
-            <a href="index-1.html" class="nav-item nav-link ">Home</a>
+            <a href="index-1.html" class="nav-item nav-link">Home</a>
             <div class="nav-item dropdown">
-              <a href="Course.html" class="nav-link dropdown-toggle active">Cources</a>
-              <ul class="dropdown-menu m-0">
-                <li class="dropdown-submenu">
-                  <a class="dropdown-item dropdown-toggle">CMA USA </a>
-                  <ul class="submenu dropdown-menu">
-                    <li>
-                      <a class="dropdown-item" href="cma-usa.html"
-                        >About CMA USA</a
-                      >
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">Course Benefits </a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">
-                        Certification/Course Fees
-                      </a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="dropdown-submenu">
-                  <a class="dropdown-item dropdown-toggle">CMA INDIAN </a>
-                  <ul class="submenu dropdown-menu">
-                    <li>
-                      <a class="dropdown-item" href="#">About CMA INDIAN</a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">Course Benefits </a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">
-                        Certification/Course Fees
-                      </a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="dropdown-submenu">
-                  <a class="dropdown-item dropdown-toggle">EA </a>
-                  <!-- <ul class="submenu dropdown-menu">
-                    <li>
-                      <a class="dropdown-item" href="#">About EA </a>
-                    </li>
-                    <li><a class="dropdown-item" href="#">Course Benefits </a></li>
-                    <li><a class="dropdown-item" href="#"> Certification/Course Fees </a></li>
-                  </ul> -->
-                </li>
-                <li class="dropdown-submenu">
-                  <a class="dropdown-item dropdown-toggle">GST VAT </a>
-                  <!-- <ul class="submenu dropdown-menu">
-                    <li>
-                      <a class="dropdown-item" href="#">About GST VAT</a>
-                    </li>
-                    <li><a class="dropdown-item" href="#">Course Benefits </a></li>
-                    <li><a class="dropdown-item" href="#"> Certification/Course Fees </a></li>
-                  </ul> -->
-                </li>
-                <li class="dropdown-submenu">
-                  <a class="dropdown-item dropdown-toggle">ACCA IFRS </a>
-                  <!-- <ul class="submenu dropdown-menu">
-                    <li>
-                      <a class="dropdown-item" href="#">About ACCA IFRS</a>
-                    </li>
-                    <li><a class="dropdown-item" href="#">Course Benefits </a></li>
-                    <li><a class="dropdown-item" href="#"> Certification/Course Fees </a></li>
-                  </ul> -->
-                </li>
-              </ul>
+              <a
+                href="#"
+                class="nav-link dropdown-toggle active"
+                data-bs-toggle="dropdown"
+                >Cources</a
+              >
+              <div class="dropdown-menu m-0">
+                <a href="cma-usa.html" class="dropdown-item">CMA USA</a>
+                <a href="Course.html" class="dropdown-item">CMA India</a>
+                <a href="Course.html" class="dropdown-item"
+                  >EA (Enrolled Agent)</a
+                >
+                <a href="Course.html" class="dropdown-item">GST VAT</a>
+                <a href="Course.html" class="dropdown-item">ACCA IFRS</a>
+              </div>
             </div>
             <a href="about-1.html" class="nav-item nav-link">About Us </a>
             <a href="elements.html" class="nav-item nav-link">FAQ Page</a>
@@ -200,10 +148,12 @@
       >
         <div class="row py-5">
           <div class="col-12 pt-lg-5 mt-lg-5 text-center">
-            <h1 class="display-4 text-white animated zoomIn mb-3">Projects</h1>
-            <a href class="h5 text-white">Home</a>
+            <h1 class="display-4 text-white animated zoomIn mb-3">
+              Our Cources
+            </h1>
+            <a href="index-1.html" class="h5 text-white">Home</a>
             <i class="fa fa-angle-double-right text-white px-2"></i>
-            <a href class="h5 text-white">Projects</a>
+            <a href class="h5 text-white"> Cources</a>
           </div>
         </div>
       </div>
@@ -244,32 +194,10 @@
           class="section-title-1 text-center position-relative pb-3 mb-5 mx-auto"
           style="max-width: 600px"
         >
-          <h5 class="fw-bold text-primary text-uppercase">Our Cources</h5>
-          <h1 class="mb-0">Projects Completed for Our Happy Clients</h1>
-        </div>
-        <div class="row mt-n2 wow fadeInUp" data-wow-delay="0.3s">
-          <div class="col-12 text-center">
-            <ul class="list-inline mb-5" id="portfolio-flters">
-              <li
-                class="btn btn-outline-primary py-2 px-4 active"
-                data-filter="*"
-              >
-                <i class="fa fa-star me-2"></i>All
-              </li>
-              <li
-                class="btn btn-outline-primary py-2 px-4"
-                data-filter=".first"
-              >
-                <i class="fa fa-laptop-code me-2"></i>Design
-              </li>
-              <li
-                class="btn btn-outline-primary py-2 px-4"
-                data-filter=".second"
-              >
-                <i class="fa fa-mobile-alt me-2"></i>Development
-              </li>
-            </ul>
-          </div>
+          <h5 class="fw-bold text-primary text-uppercase">
+            Explore Our Courses
+          </h5>
+          <h1 class="mb-0">Discover Your Educational Pathways</h1>
         </div>
         <div class="row g-5 portfolio-container">
           <div
@@ -282,18 +210,22 @@
               </div>
               <a
                 class="portfolio-title border-bottom border-5 border-primary"
-                href
+                href="cma-usa.html"
               >
-                <h4>Project Name</h4>
+                <h4>CMA USA</h4>
                 <small class="text-body text-uppercase"
-                  ><i class="fa fa-folder text-primary me-2"></i>Web
-                  Design</small
+                  ><i class="fa fa-folder text-primary me-2"></i>Certified
+                  Management Accountant (USA)</small
                 >
               </a>
               <div class="portfolio-btn">
-                <a href="img/portfolio-1.jpg" data-lightbox="portfolio"
-                  ><i class="bi bi-plus display-1 text-white"></i
-                ></a>
+                <div class="container">
+                  Course Summary CMA USA coaching programme offered by IIC
+                  Lakshya provides an opportunity for students to be certified
+                  professionals. It helps them to acquire practical and
+                  theoretical knowledge in accounting and finance. According to
+                  recent studies, the most preferred industries by…
+                </div>
               </div>
             </div>
           </div>
@@ -309,16 +241,20 @@
                 class="portfolio-title border-bottom border-5 border-primary"
                 href
               >
-                <h4>Project Name</h4>
+                <h4>CMA INDIA</h4>
                 <small class="text-body text-uppercase"
-                  ><i class="fa fa-folder text-primary me-2"></i>Web
-                  Development</small
+                  ><i class="fa fa-folder text-primary me-2"></i>Certified
+                  Management Accountant (India)</small
                 >
               </a>
               <div class="portfolio-btn">
-                <a href="img/portfolio-2.jpg" data-lightbox="portfolio"
-                  ><i class="bi bi-plus display-1 text-white"></i
-                ></a>
+                <div class="container">
+                  Course Summary The Cost and Management Accountants (CMA India)
+                  course offered by Prospire aims at building competence in
+                  students. The CMA certification has been the global benchmark
+                  for management accountants and financial professionals. The
+                  course offers training in particular fields…
+                </div>
               </div>
             </div>
           </div>
@@ -334,16 +270,21 @@
                 class="portfolio-title border-bottom border-5 border-primary"
                 href
               >
-                <h4>Project Name</h4>
+                <h4>EA</h4>
                 <small class="text-body text-uppercase"
-                  ><i class="fa fa-folder text-primary me-2"></i>Web
-                  Design</small
+                  ><i class="fa fa-folder text-primary me-2"></i>Enrolled
+                  Agent</small
                 >
               </a>
               <div class="portfolio-btn">
-                <a href="img/portfolio-3.jpg" data-lightbox="portfolio"
-                  ><i class="bi bi-plus display-1 text-white"></i
-                ></a>
+                <div class="container">
+                  The Enrolled Agent (EA) designation, offered by Prospire, is a
+                  prestigious qualification for U.S. tax professionals. EAs are
+                  IRS-authorized experts who represent individuals, businesses,
+                  and organizations in tax matters. This credential signifies
+                  top-tier expertise in tax law, making it a valuable asset for
+                  those in need of tax-related services.
+                </div>
               </div>
             </div>
           </div>
@@ -359,16 +300,25 @@
                 class="portfolio-title border-bottom border-5 border-primary"
                 href
               >
-                <h4>Project Name</h4>
+                <h4>GST VAT</h4>
                 <small class="text-body text-uppercase"
-                  ><i class="fa fa-folder text-primary me-2"></i>Web
-                  Development</small
+                  ><i class="fa fa-folder text-primary me-2"></i>Certified GST
+                  VAT Accountant</small
                 >
               </a>
               <div class="portfolio-btn">
-                <a href="img/portfolio-4.jpg" data-lightbox="portfolio"
-                  ><i class="bi bi-plus display-1 text-white"></i
-                ></a>
+                <div class="container">
+                  The Certified GST VAT Accountant certification from Prospire
+                  is tailored for professionals specializing in Goods and
+                  Services Tax (GST) and Value Added Tax (VAT). In many
+                  countries, GST and VAT are critical components of the tax
+                  system, and this certification equips individuals with the
+                  expertise to manage compliance, calculations, and reporting
+                  related to these taxes. Certified GST VAT Accountants are
+                  experts in these tax systems, offering valuable support to
+                  businesses in navigating complex tax regulations and ensuring
+                  compliance.
+                </div>
               </div>
             </div>
           </div>
@@ -384,16 +334,23 @@
                 class="portfolio-title border-bottom border-5 border-primary"
                 href
               >
-                <h4>Project Name</h4>
+                <h4>ACCA IFRS</h4>
                 <small class="text-body text-uppercase"
-                  ><i class="fa fa-folder text-primary me-2"></i>Web
-                  Design</small
+                  ><i class="fa fa-folder text-primary me-2"></i>Certified ACCA
+                  IFRS Accountant</small
                 >
               </a>
               <div class="portfolio-btn">
-                <a href="img/portfolio-5.jpg" data-lightbox="portfolio"
-                  ><i class="bi bi-plus display-1 text-white"></i
-                ></a>
+                <div class="container">
+                  The Certified ACCA IFRS Accountant, provided by Prospire, is
+                  for finance professionals seeking expertise in International
+                  Financial Reporting Standards (IFRS). This certification
+                  ensures a deep understanding of IFRS principles and their
+                  effective application. Certified ACCA IFRS Accountants are
+                  experts in financial reporting and international accounting
+                  standards, vital for accurate financial reporting and global
+                  compliance.
+                </div>
               </div>
             </div>
           </div>
@@ -401,25 +358,55 @@
             class="col-xl-4 col-lg-6 col-md-6 portfolio-item second wow slideInUp"
             data-wow-delay="0.5s"
           >
-            <div class="position-relative portfolio-box">
-              <div class="portfolio-img rounded overflow-hidden">
-                <img class="img-fluid w-100" src="img/portfolio-6.jpg" alt />
-              </div>
-              <a
-                class="portfolio-title border-bottom border-5 border-primary"
-                href
-              >
-                <h4>Project Name</h4>
-                <small class="text-body text-uppercase"
-                  ><i class="fa fa-folder text-primary me-2"></i>Web
-                  Development</small
-                >
-              </a>
-              <div class="portfolio-btn">
-                <a href="img/portfolio-6.jpg" data-lightbox="portfolio"
-                  ><i class="bi bi-plus display-1 text-white"></i
-                ></a>
-              </div>
+            <div
+              class="bg-primary rounded h-100 d-flex align-items-center p-5 wow zoomIn"
+              data-wow-delay="0.9s"
+            >
+              <form>
+                <div class="row g-3">
+                  <div class="col-xl-12">
+                    <input
+                      type="text"
+                      class="form-control bg-light border-0"
+                      placeholder="Your Name"
+                      style="height: 55px"
+                    />
+                  </div>
+                  <div class="col-12">
+                    <input
+                      type="email"
+                      class="form-control bg-light border-0"
+                      placeholder="Your Email"
+                      style="height: 55px"
+                    />
+                  </div>
+                  <div class="col-12">
+                    <select
+                      class="form-select bg-light border-0"
+                      style="height: 55px"
+                    >
+                      <option selected>Select A Cource</option>
+                      <option value="1">CMA USA</option>
+                      <option value="2">CMA Indian</option>
+                      <option value="3">EA</option>
+                      <option value="3">GST VAT</option>
+                      <option value="3">ACCA IFRS</option>
+                    </select>
+                  </div>
+                  <div class="col-12">
+                    <textarea
+                      class="form-control bg-light border-0"
+                      rows="3"
+                      placeholder="Message"
+                    ></textarea>
+                  </div>
+                  <div class="col-12">
+                    <button class="btn btn-dark w-100 py-3" type="submit">
+                      Request A Quote
+                    </button>
+                  </div>
+                </div>
+              </form>
             </div>
           </div>
         </div>
