--- a/index-1.html
+++ b/index-1.html
@@ -115,79 +115,19 @@
             <a href="index-1.html" class="nav-item nav-link active">Home</a>
             <div class="nav-item dropdown">
               <a
-                href="Course.html"
-                class="nav-link dropdown-toggle"
+                href="#"
+                class="nav-link dropdown-toggle "
                 data-bs-toggle="dropdown"
                 >Cources</a
               >
-              <ul class="dropdown-menu m-0">
-                <li class="dropdown-submenu">
-                  <a class="dropdown-item dropdown-toggle" >CMA USA </a>
-                  <ul class="submenu dropdown-menu">
-                    <li>
-                      <a class="dropdown-item" href="cma-usa.html"
-                        >About CMA USA</a
-                      >
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">Course Benefits </a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">
-                        Certification/Course Fees
-                      </a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="dropdown-submenu">
-                  <a class="dropdown-item dropdown-toggle">CMA INDIAN </a>
-                  <ul class="submenu dropdown-menu">
-                    <li>
-                      <a class="dropdown-item" href="#">About CMA INDIAN</a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">Course Benefits </a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">
-                        Certification/Course Fees
-                      </a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="dropdown-submenu">
-                  <a class="dropdown-item dropdown-toggle">EA </a>
-                  <!-- <ul class="submenu dropdown-menu">
-                    <li>
-                      <a class="dropdown-item" href="#">About EA </a>
-                    </li>
-                    <li><a class="dropdown-item" href="#">Course Benefits </a></li>
-                    <li><a class="dropdown-item" href="#"> Certification/Course Fees </a></li>
-                  </ul> -->
-                </li>
-                <li class="dropdown-submenu">
-                  <a class="dropdown-item dropdown-toggle">GST VAT </a>
-                  <!-- <ul class="submenu dropdown-menu">
-                    <li>
-                      <a class="dropdown-item" href="#">About GST VAT</a>
-                    </li>
-                    <li><a class="dropdown-item" href="#">Course Benefits </a></li>
-                    <li><a class="dropdown-item" href="#"> Certification/Course Fees </a></li>
-                  </ul> -->
-                </li>
-                <li class="dropdown-submenu">
-                  <a class="dropdown-item dropdown-toggle">ACCA IFRS </a>
-                  <!-- <ul class="submenu dropdown-menu">
-                    <li>
-                      <a class="dropdown-item" href="#">About ACCA IFRS</a>
-                    </li>
-                    <li><a class="dropdown-item" href="#">Course Benefits </a></li>
-                    <li><a class="dropdown-item" href="#"> Certification/Course Fees </a></li>
-                  </ul> -->
-                </li>
-              </ul>
-            </div>
-            <a href="about-1.html" class="nav-item nav-link">About Us </a>
+              <div class="dropdown-menu m-0">
+                <a href="cma-usa.html" class="dropdown-item ">CMA USA</a>
+                <a href="Course.html" class="dropdown-item">CMA India</a>
+                <a href="Course.html" class="dropdown-item">EA (Enrolled Agent)</a>
+                <a href="Course.html" class="dropdown-item">GST VAT</a>
+                <a href="Course.html" class="dropdown-item">ACCA IFRS</a>
+              </div>
+            </div>            <a href="about-1.html" class="nav-item nav-link">About Us </a>
             <a href="elements.html" class="nav-item nav-link">FAQ Page</a>
             <a href="service-1.html" class="nav-item nav-link"
               >Blog/News Page (op)</a
@@ -218,12 +158,12 @@
                   Success Awaits, Bright Tomorrow
                 </h1>
                 <a
-                  href
+                  href="Course.html"
                   class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft"
-                  >Free Quote</a
+                  >Our Cources</a
                 >
                 <a
-                  href
+                  href="contact.html"
                   class="btn btn-outline-light py-md-3 px-md-5 animated slideInRight"
                   >Contact Us</a
                 >
@@ -243,12 +183,12 @@
                   prospire: Your Path to Success
                 </h1>
                 <a
-                  href
+                href="Course.html"
                   class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft"
-                  >Free Quote</a
+                  >Our Cources</a
                 >
                 <a
-                  href
+                href="contact.html"
                   class="btn btn-outline-light py-md-3 px-md-5 animated slideInRight"
                   >Contact Us</a
                 >
@@ -388,123 +328,137 @@
                       class="portfolio-title border-bottom border-5 border-primary"
                       href
                     >
-                      <h4>Project Name</h4>
+                      <h4>CMA
+                        USA</h4>
                       <small class="text-body text-uppercase"
-                        ><i class="fa fa-folder text-primary me-2"></i>CMA
-                        USA</small
+                        ><i class="fa fa-folder text-primary me-2"></i>Certified
+                        Management Accountant (USA)</small
                       >
                     </a>
                     <div class="portfolio-btn">
-                      <a href="img/portfolio-1.jpg" data-lightbox="portfolio"
-                        ><i class="bi bi-plus display-1 text-white"></i
-                      ></a>
+                      <div class="container">
+                        Course Summary CMA USA coaching programme offered by IIC
+                        Lakshya provides an opportunity for students to be certified
+                        professionals. It helps them to acquire practical and
+                        theoretical knowledge in accounting and finance. According to
+                        recent studies, the most preferred industries by…
+                      </div>
                     </div>
                   </div>
                 </div>
                 <div class="portfolio-item">
                   <div class="position-relative portfolio-box">
                     <div class="portfolio-img rounded overflow-hidden">
-                      <img
-                        class="img-fluid w-100"
-                        src="img/portfolio-2.jpg"
-                        alt
-                      />
+                      <img class="img-fluid w-100" src="img/portfolio-2.jpg" alt />
                     </div>
                     <a
                       class="portfolio-title border-bottom border-5 border-primary"
                       href
                     >
-                      <h4>Project Name</h4>
+                      <h4>CMA INDIA</h4>
                       <small class="text-body text-uppercase"
-                        ><i class="fa fa-folder text-primary me-2"></i>CMA
-                        India</small
+                        ><i class="fa fa-folder text-primary me-2"></i>Certified
+                        Management Accountant (India)</small
                       >
                     </a>
                     <div class="portfolio-btn">
-                      <a href="img/portfolio-1.jpg" data-lightbox="portfolio"
-                        ><i class="bi bi-plus display-1 text-white"></i
-                      ></a>
+                      <div class="container">
+                        Course Summary The Cost and Management Accountants (CMA India)
+                        course offered by Prospire aims at building competence in
+                        students. The CMA certification has been the global benchmark
+                        for management accountants and financial professionals. The
+                        course offers training in particular fields…
+                      </div>
                     </div>
                   </div>
-                </div>
+                      </div>
                 <div class="portfolio-item">
                   <div class="position-relative portfolio-box">
                     <div class="portfolio-img rounded overflow-hidden">
-                      <img
-                        class="img-fluid w-100"
-                        src="img/portfolio-2.jpg"
-                        alt
-                      />
+                      <img class="img-fluid w-100" src="img/portfolio-3.jpg" alt />
                     </div>
                     <a
                       class="portfolio-title border-bottom border-5 border-primary"
                       href
                     >
-                      <h4>Project Name</h4>
+                      <h4>EA</h4>
                       <small class="text-body text-uppercase"
-                        ><i class="fa fa-folder text-primary me-2"></i>EA
-                        (Enrolled Agent)</small
+                        ><i class="fa fa-folder text-primary me-2"></i>Enrolled
+                        Agent</small
                       >
                     </a>
                     <div class="portfolio-btn">
-                      <a href="img/portfolio-1.jpg" data-lightbox="portfolio"
-                        ><i class="bi bi-plus display-1 text-white"></i
-                      ></a>
+                      <div class="container">
+                        The Enrolled Agent (EA) designation, offered by Prospire, is a
+                        prestigious qualification for U.S. tax professionals. EAs are
+                        IRS-authorized experts who represent individuals, businesses,
+                        and organizations in tax matters. This credential signifies
+                        top-tier expertise in tax law, making it a valuable asset for
+                        those in need of tax-related services.
+                      </div>
                     </div>
                   </div>
-                </div>
+                      </div>
                 <div class="portfolio-item">
                   <div class="position-relative portfolio-box">
                     <div class="portfolio-img rounded overflow-hidden">
-                      <img
-                        class="img-fluid w-100"
-                        src="img/portfolio-2.jpg"
-                        alt
-                      />
+                      <img class="img-fluid w-100" src="img/portfolio-4.jpg" alt />
                     </div>
                     <a
                       class="portfolio-title border-bottom border-5 border-primary"
                       href
                     >
-                      <h4>Project Name</h4>
+                      <h4>GST VAT</h4>
                       <small class="text-body text-uppercase"
-                        ><i class="fa fa-folder text-primary me-2"></i>GST
-                        VAT</small
+                        ><i class="fa fa-folder text-primary me-2"></i>Certified GST
+                        VAT Accountant</small
                       >
                     </a>
                     <div class="portfolio-btn">
-                      <a href="img/portfolio-1.jpg" data-lightbox="portfolio"
-                        ><i class="bi bi-plus display-1 text-white"></i
-                      ></a>
+                      <div class="container">
+                        The Certified GST VAT Accountant certification from Prospire
+                        is tailored for professionals specializing in Goods and
+                        Services Tax (GST) and Value Added Tax (VAT). In many
+                        countries, GST and VAT are critical components of the tax
+                        system, and this certification equips individuals with the
+                        expertise to manage compliance, calculations, and reporting
+                        related to these taxes. Certified GST VAT Accountants are
+                        experts in these tax systems, offering valuable support to
+                        businesses in navigating complex tax regulations and ensuring
+                        compliance.
+                      </div>
                     </div>
                   </div>
-                </div>
+                            </div>
                 <div class="portfolio-item">
                   <div class="position-relative portfolio-box">
                     <div class="portfolio-img rounded overflow-hidden">
-                      <img
-                        class="img-fluid w-100"
-                        src="img/portfolio-2.jpg"
-                        alt
-                      />
+                      <img class="img-fluid w-100" src="img/portfolio-5.jpg" alt />
                     </div>
                     <a
                       class="portfolio-title border-bottom border-5 border-primary"
                       href
                     >
-                      <h4>Project Name</h4>
+                      <h4>ACCA IFRS</h4>
                       <small class="text-body text-uppercase"
-                        ><i class="fa fa-folder text-primary me-2"></i>ACCA
-                        IFRS</small
+                        ><i class="fa fa-folder text-primary me-2"></i>Certified ACCA
+                        IFRS Accountant</small
                       >
                     </a>
                     <div class="portfolio-btn">
-                      <a href="img/portfolio-1.jpg" data-lightbox="portfolio"
-                        ><i class="bi bi-plus display-1 text-white"></i
-                      ></a>
+                      <div class="container">
+                        The Certified ACCA IFRS Accountant, provided by Prospire, is
+                        for finance professionals seeking expertise in International
+                        Financial Reporting Standards (IFRS). This certification
+                        ensures a deep understanding of IFRS principles and their
+                        effective application. Certified ACCA IFRS Accountants are
+                        experts in financial reporting and international accounting
+                        standards, vital for accurate financial reporting and global
+                        compliance.
+                      </div>
                     </div>
                   </div>
-                </div>
+                      </div>
               </div>
             </div>
           </div>
@@ -720,7 +674,6 @@
         </div>
       </div>
     </div>
-
 
     <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
       <div class="container py-5">
